# vibe-print

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/stories/: how-sed-and-awk-saved-my-life.md
bambustudio_mcp/: __init__.py  __main__.py  config.py  server.py
bambustudio_mcp/camera/: __init__.py  detector.py  stream.py
bambustudio_mcp/generator/: __init__.py  ai_generator.py  image_analyzer.py  parametric.py  requirements.py  templates.py
bambustudio_mcp/iteration/: __init__.py  recommender.py  tracker.py
bambustudio_mcp/materials/: __init__.py  filaments.py  nozzles.py
bambustudio_mcp/models/: __init__.py  analyzer.py
bambustudio_mcp/printer/: __init__.py  controller.py  mqtt_client.py  status.py
bambustudio_mcp/slicer/: __init__.py  cli.py  profiles.py
bambustudio_mcp/wizard/: __init__.py  design_review.py  guided_workflow.py  material_optimizer.py  slicing_review.py
examples/: complete_workflow.py  generation_tools_reference.md  mcp_tools_reference.md  tube_squeezer_workflow.py
vibe_print/: __init__.py  __main__.py  config.py  server.py
vibe_print/camera/: __init__.py  detector.py  stream.py
vibe_print/generator/: __init__.py  ai_generator.py  parametric.py  templates.py
vibe_print/iteration/: __init__.py  recommender.py  tracker.py
vibe_print/materials/: __init__.py  filaments.py  nozzles.py
vibe_print/models/: __init__.py  scaler.py
vibe_print/printer/: __init__.py  controller.py  mqtt_client.py
vibe_print/slicer/: __init__.py  cli.py  parameters.py  profiles.py
vibe_print/wizard/: __init__.py  design_review.py  guided_workflow.py  material_optimizer.py  novice_parser.py  slicing_review.py
